--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 </head>
 <body>
     
+    <div id="root">
+
+        <div class="tasks">
+            <div class="item" v-for="(task, index) in tasks">
+                {{task}}
+            </div>
+        </div>
+
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
     <script src="./assets/js/app.js"></script>
