--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <div class="tasks">
             <div class="item" v-for="(task, index) in tasks">
                 {{task}}
+
+                <div class="deleteTask">
+                    <i class="fas fa-times-circle"></i>
+                </div>
             </div>
         </div>
 
