added delete function to the "x" icon
remove task from the list by clicking on "x"

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 {{task}}
 
                 <div class="deleteTask">
-                    <i class="fas fa-times-circle"></i>
+                    <i class="fas fa-times-circle" @click="deleteTask"></i>
                 </div>
             </div>
         </div>
