added function to the input in order to add new task to the list

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <div class="addTask">
             <input type="text" v-model="newTask">
-            <button>Add</button>
+            <button @click="addTask">Add</button>
         </div>
 
         <div class="tasks">
