added alternative message in case list is empty

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="error" v-show="error">Inserisci una task di almeno 3 caratteri</div>
         </div>
 
-        <div class="tasks">
+        <div class="tasks" v-if="tasks.length > 0">
             <div class="item" v-for="(task, index) in tasks">
                 {{task}}
 
@@ -26,6 +26,9 @@
                     <i class="fas fa-times-circle" @click="deleteTask"></i>
                 </div>
             </div>
+        </div>
+        <div v-else>
+            <p>No tasks remaining</p>
         </div>
 
     </div>
